# ME570_assignment4_myRepo

./: CMakeLists.txt  Cone.cpp  Ellipsoid.cpp  README.md  Shapes.xml  Shapes_one_box.xml  Shapes_two_boxes.xml  box.cpp  gradingsheet_4.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  shape.cpp  shape.h  xmlshapesreader.cpp  xmlshapesreader.h  xmlshapeswriter.cpp  xmlshapeswriter.h
